--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit
-pandas
-numpy
-sklearn.cluster import KMeans
-matplotlib.pyplot
+streamlit==1.3.0
+pandas==1.4.1
+numpy==1.22.3
+scikit-learn==1.0.2
+matplotlib==3.5.1
